--- a/src/app/layout/common/header/header.component.html
+++ b/src/app/layout/common/header/header.component.html
@@ -1,9 +1,12 @@
 <div class="w-full">
+
     <div 
         *ngIf="headerType === 'default'" 
         class="px-4 w-full flex flex-row justify-between items-center bg-card">
         <!-- Choose Country -->
-        <div class="flex flex-col items-center justify-center w-10 h-12 border rounded p-2">
+        <div 
+            class="flex flex-col items-center justify-center w-10 h-12 border rounded p-2"
+            (click)="chooseCountry()">
             <span class="text-md">MM</span>
             <mat-icon svgIcon="heroicons_solid:chevron-down"></mat-icon>
         </div>
@@ -23,15 +26,17 @@
         </div>
 
     </div>
+
     <div 
         *ngIf="headerType === 'back'"
-        class="px-6 py-4 w-full flex flex-row justify-between items-center bg-primary">
-        <mat-icon onclick="history.back()" class="text-white" [svgIcon]="'feather:arrow-left'"></mat-icon>
-        <span class="font-bold text-white">Voucher</span>
-        <div class="flex flex-row gap-2">
-            <mat-icon class="text-white" svgIcon="heroicons_outline:bell"></mat-icon>
-            <mat-icon class="text-white" svgIcon="heroicons_outline:user-circle"></mat-icon>
+        class="px-6 py-4 w-full flex flex-row justify-between items-center bg-white">
+        <mat-icon onclick="history.back()" class="text-primary" [svgIcon]="'feather:arrow-left'"></mat-icon>
+        <span class="font-bold text-primary">{{headerTitle}}</span>
+        <div class="flex flex-row gap-2 items-center">
+            <mat-icon class="text-primary" svgIcon="heroicons_outline:bell"></mat-icon>
+            <!-- <user [showAvatar]="false" ></user> -->
         </div>
     </div>
+
 </div>
 
