--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -1,16 +1,17 @@
 <div class="flex flex-col w-full h-full">
     
     <!-- Banners -->
-    <div class="w-full">
+    <div class="w-full mb-4">
         <swiper-banner class="w-full mt-2 sm:mt-4"></swiper-banner>
-
     </div>
 
     <!-- Bills -->
     <div class="w-full flex flex-col mt-2">
         <div class="grid grid-cols-3 w-full gap-2">
             <ng-container *ngFor="let category of categories">
-                <div class="col-span-1 w-full flex flex-col items-center justify-center">
+                <div
+                    (click)="selectCategory(category)"
+                    class="col-span-1 w-full flex flex-col items-center justify-center">
                     <div class="w-full overflow-hidden flex justify-center">
                         <img class="object-contain w-20 h-20" [src]="category.icon" alt="">
                     </div>
@@ -35,6 +36,14 @@
                 </ng-container>
             </div>
         </div>
+    </div>
+
+    <div class="mt-8 w-full h-50 rounded-xl flex flex-col items-center justify-center bg-green-200">
+        <input type="file" (change)="onSelectedFile($event)">
+        <button 
+            mat-flat-button
+            (click)="onSubmit()">Submit
+        </button>
     </div>
 
 </div>
